test/libsolidity/syntaxTests/visibility/interface/function_public.sol
interface I {
	function f() public;
}
// ----
// TypeError: (15-35): Functions in interfaces must be declared external.
